--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- NavBar start -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -108,7 +108,7 @@
   </div>
   <!-- wriiten part End-->
 
-  <div class="row">
+  <div class="row text-center">
     <div class="col-sm-4">
       <p class="text-center"><strong>Rice</strong></p><br>
       <a href="#demo" data-toggle="collapse">
